fix(navbar): fixed logo on navbar on small screen

--- a/src/components/public/Subscription/Subscription.module.scss
+++ b/src/components/public/Subscription/Subscription.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
     //height: 200px; 
     background-color: white; 
-    background-image: linear-gradient(to bottom, white 50%, #021A33 50%);
+    background-image: linear-gradient(to bottom, #FFFFFF 50%, #021A33 50%);
     @apply p-3
 }
